# nfl-ml-project

./: .dockerignore  DEPLOYMENT.md  Dockerfile  README.md  pyproject.toml  render.yaml
data/: nfl_games_real.csv  nfl_games_sample.csv
models/: nfl_combined_model.joblib  nfl_team_model.joblib  nfl_win_model.joblib
nfl-ml-project/: .gitignore  README.md  pyproject.toml
nfl-ml-project/models/: nfl_win_model.joblib
nfl-ml-project/reports/: feature_importance.csv  metrics.json
nfl-ml-project/src/nfl_ml/: data.py  features.py  predict.py  train.py
reports/: combined_feature_importance.csv  combined_metrics.json  team_feature_importance.csv  team_metrics.json
src/nfl_ml/: __init__.py  features.py  predict.py  service.py  train.py  web.py
tests/: test_features.py
web/: app.js  index.html  styles.css
