[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nfl-ml-project"
version = "0.1.0"
description = "NFL game outcome prediction pipeline"
requires-python = ">=3.9"
dependencies = [
  "pandas>=2.0",
  "scikit-learn==1.6.1",
  "joblib>=1.3",
  "fastapi>=0.95",
  "uvicorn>=0.22"
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
